# qutecute

./: .gitignore  README.md  devenv.nix  flake.nix  session.yaml
qute/: renameme.cabal
qute/app/: Main.hs
qute/src/: Params.hs
